--- a/style.css
+++ b/style.css
@@ -1,67 +1,70 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Poppins:200, 300, 400, 500, 600, 700, 800, 900&display=swap');
 
-* {
-    box-sizing: border-box;
+* { 
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 body {
-    font-family: 'Open sans', sans-serif;
-    color: #222;
-    padding-bottom: 50px;
+    min-height: 1000px;
 }
 
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
-.nav {
+header {
     position: fixed;
-    background-color: #222;
     top: 0;
     left: 0;
-    right: 0;
-    transition: all .3s ease-in-out;
-}
-
-.nav .container {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 0;
-    transition: all 0.3s ease-in-out;
+    padding: 40px 100px;
+    z-index: 1000;
+    transition: 0.6s;
 }
 
-.nav ul {
-    display: flex;
-    list-style-type: none;
-    align-items: center;
-    justify-content: center;
-}
-
-.nav a {
+header .logo {
+    position: relative;
+    font-weight: 700;
     color: #fff;
     text-decoration: none;
+    font-size: 2em;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    transition: 0.6s;
+}
+
+header ul {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header ul li {
+    position: relative;
+    list-style: none;
+}
+
+header ul li a {
+    position: relative;
+    margin: 0.15px;
+    text-decoration: none;
+    color: #fff;
+    letter-spacing: 2px;
+    font-weight: 300;
+    transition: 0.6s;
     padding: 7px 15px;
-    transition: all 0.3s ease-in-out;
 }
 
-.nav.active {
-    background-color: #fff;
-    box-shadow:  0 2px 10px rgba(0, 0, 0, 0.3);
-}
-
-.nav.active a {
-    color: #000;
-}
-
-.nav.active .container {
-    padding: 10px 0;
-}
-
-.nav a.current, .nav a:hover {
-    color: #c0392b;
-    font-weight: bold;
+.banner {
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+    background: url(bg.jpg);
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
