--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ header .logo {
     color: #fff;
     text-decoration: none;
     font-size: 2em;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     letter-spacing: 2px;
     transition: 0.6s;
 }
@@ -170,7 +170,7 @@ p {
     font-size: 18px;
     margin-bottom: 10px;
     text-transform: uppercase;
-    font-weight: 700;
+    font-weight: 700;    
 }
 
 .stats {
@@ -499,8 +499,18 @@ p {
         padding: 100px 50px 50px 50px;
     }
 
+    .services {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        max-width: 100%;
+        margin-top: 40px;
+    }
+
     .services .box {
         width: 100%;
+        display: flex;
+        align-items: center;
     }
 
     .stats {
