Change background color

--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ header.sticky ul li a {
 }
 
 .sec {
-    background: #fff;
+    background: lavender;
     padding: 100px;
     min-height: 100vh;
     display: flex;
