--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+
+    /* Custom Paint Brush Cursor */
+    cursor: url('/images/paint-brush.png'), auto;
 }
 
 html {
