--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ header ul li a {
     font-weight: 300;
     transition: 0.6s;
     padding: 7px 15px;
+    cursor: pointer;
 }
 
 header.sticky .logo, 
@@ -482,6 +483,7 @@ p {
         display: inline-block;
         margin: 10px 0;
         font-size: 20px;
+        cursor: pointer;
     }
     
     header .logo,
