--- a/style.css
+++ b/style.css
@@ -377,14 +377,41 @@ p {
     color: rgba(255, 255, 255, 0.5)
 }
 
+.contactForm #file-button,
+.contactForm .row100 input[type="submit"] {
+    cursor: pointer;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: 500;
+    border: 1px solid #000;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 30px;
+}
+
+.contactForm #file-button {
+    color: white;
+    background-color: #009578;
+    margin: 0 20px;
+}
+
+.contactForm #file-button:hover {
+    background-color: #00b28f;
+}
+
+.contactForm #file-text {
+    margin: 0 20px;
+    color: #aaa;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: 400;
+}
+
 .contactForm .row100 input[type="submit"] {
     background: #fff;
     color: #000;
     max-width: 100px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    cursor: pointer;
-    font-weight: 500;
+    margin-top: 50px;
 }
 
 .sci ul {
