--- a/style.css
+++ b/style.css
@@ -390,13 +390,9 @@ p {
 }
 
 .contactForm #file-button {
-    color: white;
-    background-color: #009578;
+    color: #000;
+    background-color: #fff;
     margin: 0 20px;
-}
-
-.contactForm #file-button:hover {
-    background-color: #00b28f;
 }
 
 .contactForm #file-text {
@@ -408,10 +404,14 @@ p {
 }
 
 .contactForm .row100 input[type="submit"] {
-    background: #fff;
-    color: #000;
+    background: #009578;
+    color: #fff;
     max-width: 100px;
     margin-top: 50px;
+}
+
+.contactForm .row100 input[type="submit"]:hover {
+    background-color: #00b28f;
 }
 
 .sci ul {
